fixes mobile menu position and gaps

--- a/styles/style.less
+++ b/styles/style.less
@@ -182,12 +182,12 @@ nav.main-nav {
         width: 220px;
         padding: 5px 0;
         position: absolute;
-        top: 0;
-        left: 0;
+        top: 10px;
+        left: -20px;
         display: none;
         opacity: 0;
         visibility: 0;
-        /*background: #fff 10px 11px;*/
+        background: #fff 10px 11px;
         li {
           background: white;
           list-style-type: none;
